--- a/css/layout.css
+++ b/css/layout.css
@@ -57,7 +57,7 @@
             }
             .container > .row > .column.right {
                 width: 100%;
-                margin: 0;
+                /* margin: 0; */
                 margin-top: calc(var(--section-padding) * 2);
             }
 }
