--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,11 @@
 /* layout */
 .container.hero {
     padding-bottom: var(--section-padding);
+    background-image: url(../img/hero-image.jpg);
+    background-size: cover;
+    background-position: bottom center;
+    background-attachment: fixed;
+    min-height: 100vh;
 }
 
 footer.container {
@@ -45,8 +50,21 @@ footer.container {
     margin-bottom: calc(var(--hero-space) * 2);
 }
 .hero .form {
-    margin-bottom: var(--hero-space);
+    width: 90%;
+    margin: 0 5% var(--hero-space);
 }
+    .hero .form > input {
+        width: 100%;
+        color: #fff;
+        background-color: transparent;
+        border-bottom-color: #fff;
+    }
+        .hero .form > input::placeholder {
+            color: #fff;
+        }
+    .hero .form > .btn {
+        float: none;
+    }
 
 /* main content */
 main h2 {
@@ -70,6 +88,10 @@ main p {
         text-decoration-line: none;
     }
 
+main .form > .btn {
+    float: right;
+}
+
 /* footer */
 footer {
     text-align: center;
@@ -84,8 +106,9 @@ footer {
         gap: 10px;
         padding: 10px 20px;
         border-bottom: 1px solid #fff;
+        position: relative;
     }
-    footer .fa {
+    footer .social.fa {
         display: inline-block;
         width: 40px;
         padding: 10px;
@@ -95,10 +118,15 @@ footer {
         border-radius: 50%;
         transition: all 0.5s;
     }
-        footer .fa:hover {
+        footer .social.fa:hover {
             background-color: #fff;
             color: var(--main-color);
         }
+    footer .btn.circle {
+        position: absolute;
+        top: -24px;
+        right: -13px;
+    }
     footer .text-trio {
         display: inline-block;
         width: 100%;
